namespace java com.igool.rpc.db.model.thrift
struct Lsmx{
    1:string businessCode,
    2:string fileCode,
    3:string pcCode,
    4:string box,
    5:string signDate,
    6:i32 userId,
    7:string userName,
    8:i32 businessId
}